create main menu

--- a/src/main/resources/com/company/xvspellconverter/messages_en.properties
+++ b/src/main/resources/com/company/xvspellconverter/messages_en.properties
@@ -1,5 +1,8 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
 
+com.company.xvspellconverter.entity/Convert=Convert
+com.company.xvspellconverter.entity/Convert.from=From
+com.company.xvspellconverter.entity/Convert.to=To
 com.company.xvspellconverter.entity/User=User
 com.company.xvspellconverter.entity/User.id=ID
 com.company.xvspellconverter.entity/User.username=Username
@@ -21,8 +24,10 @@ com.company.xvspellconverter.view.main/applicationTitle.text=Xvspellconverter
 com.company.xvspellconverter.view.main/navigation.ariaLabel=Views
 com.company.xvspellconverter.view.main/drawerToggle.ariaLabel=Menu toggle
 
+com.company.xvspellconverter.view.anonymousmainviewtopmenu/AnonymousMainViewTopMenu.title=Xavante spell converter
+
 com.company.xvspellconverter.view.login/LoginView.title=Login - Xvspellconverter
-com.company.xvspellconverter.view.login/loginForm.headerTitle=Xvspellconverter
+com.company.xvspellconverter.view.login/loginForm.headerTitle=XV Converter
 com.company.xvspellconverter.view.login/loginForm.username=Username
 com.company.xvspellconverter.view.login/loginForm.password=Password
 com.company.xvspellconverter.view.login/loginForm.submit=Log in
