--- a/src/main/resources/com/company/xvspellconverter/messages_pt_BR.properties
+++ b/src/main/resources/com/company/xvspellconverter/messages_pt_BR.properties
@@ -1,50 +1,50 @@
-databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=A user with the same username already exists
+databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=Já existe um usuário com o mesmo nome de usuário
 
-com.company.xvspellconverter.entity/Convert=Convert
-com.company.xvspellconverter.entity/Convert.from=From
-com.company.xvspellconverter.entity/Convert.to=To
-com.company.xvspellconverter.entity/User=User
-com.company.xvspellconverter.entity/User.id=ID
-com.company.xvspellconverter.entity/User.username=Username
-com.company.xvspellconverter.entity/User.firstName=First name
-com.company.xvspellconverter.entity/User.lastName=Last name
-com.company.xvspellconverter.entity/User.password=Password
-com.company.xvspellconverter.entity/User.email=Email
-com.company.xvspellconverter.entity/User.timeZoneId=Time zone
-com.company.xvspellconverter.entity/User.active=Active
-com.company.xvspellconverter.entity/User.version=Version
-com.company.xvspellconverter.entity/Word=Word
-com.company.xvspellconverter.entity/Word.from=From
-com.company.xvspellconverter.entity/Word.id=Id
-com.company.xvspellconverter.entity/Word.to=To
-com.company.xvspellconverter.entity/Word.uuid=Uuid
+com.company.xvspellconverter.view.main/MainView.title=XV Converter
+com.company.xvspellconverter.view.main/applicationTitle.text=XV Converter
+com.company.xvspellconverter.view.main/navigation.ariaLabel=Telas
+com.company.xvspellconverter.view.main/drawerToggle.ariaLabel=Alternar menu
 
-com.company.xvspellconverter.view.main/MainView.title=Xvspellconverter
-com.company.xvspellconverter.view.main/applicationTitle.text=Xvspellconverter
-com.company.xvspellconverter.view.main/navigation.ariaLabel=Views
-com.company.xvspellconverter.view.main/drawerToggle.ariaLabel=Menu toggle
+com.company.xvspellconverter.infra.entity/Convert=Convert
+com.company.xvspellconverter.infra.entity/Convert.from=From
+com.company.xvspellconverter.infra.entity/Convert.to=To
+com.company.xvspellconverter.infra.entity/User=User
+com.company.xvspellconverter.infra.entity/User.active=Active
+com.company.xvspellconverter.infra.entity/User.email=Email
+com.company.xvspellconverter.infra.entity/User.firstName=First name
+com.company.xvspellconverter.infra.entity/User.id=ID
+com.company.xvspellconverter.infra.entity/User.lastName=Last name
+com.company.xvspellconverter.infra.entity/User.password=Password
+com.company.xvspellconverter.infra.entity/User.timeZoneId=Time zone
+com.company.xvspellconverter.infra.entity/User.username=Username
+com.company.xvspellconverter.infra.entity/User.version=Version
+com.company.xvspellconverter.infra.entity/Word=Word
+com.company.xvspellconverter.infra.entity/Word.from=From
+com.company.xvspellconverter.infra.entity/Word.id=Id
+com.company.xvspellconverter.infra.entity/Word.to=To
+com.company.xvspellconverter.infra.entity/Word.uuid=Uuid
 
-com.company.xvspellconverter.view.anonymousmainviewtopmenu/AnonymousMainViewTopMenu.title=Conversor de grafia xavante
+com.company.xvspellconverter.infra.view.anonymousmainviewtopmenu/AnonymousMainViewTopMenu.title=Xavante spell converter
 
-com.company.xvspellconverter.view.login/LoginView.title=Login - Xvspellconverter
-com.company.xvspellconverter.view.login/loginForm.headerTitle=Conversor XV
-com.company.xvspellconverter.view.login/loginForm.username=Username
-com.company.xvspellconverter.view.login/loginForm.password=Password
-com.company.xvspellconverter.view.login/loginForm.submit=Log in
-com.company.xvspellconverter.view.login/loginForm.forgotPassword=Forgot password
-com.company.xvspellconverter.view.login/loginForm.errorTitle=Login failed
-com.company.xvspellconverter.view.login/loginForm.badCredentials=Check that you have entered the correct username and password and try again
-com.company.xvspellconverter.view.login/loginForm.errorUsername=Username is required
-com.company.xvspellconverter.view.login/loginForm.errorPassword=Password is required
-com.company.xvspellconverter.view.login/loginForm.rememberMe=Remember me
+com.company.xvspellconverter.infra.view.login/LoginView.title=Login - XV Converter
+com.company.xvspellconverter.infra.view.login/loginForm.headerTitle=XV Converter
+com.company.xvspellconverter.infra.view.login/loginForm.username=Nome de usuário
+com.company.xvspellconverter.infra.view.login/loginForm.password=Senha
+com.company.xvspellconverter.infra.view.login/loginForm.submit=Entrar
+com.company.xvspellconverter.infra.view.login/loginForm.forgotPassword=Esqueci a senha
+com.company.xvspellconverter.infra.view.login/loginForm.errorTitle=O login falhou
+com.company.xvspellconverter.infra.view.login/loginForm.badCredentials=Verifique se você entrou a senha e o usuário correto e tente novamente.
+com.company.xvspellconverter.infra.view.login/loginForm.errorUsername=Nome de usuário é obrigatório
+com.company.xvspellconverter.infra.view.login/loginForm.errorPassword=Senha é obrigatória
+com.company.xvspellconverter.infra.view.login/loginForm.rememberMe=Lembrar de mim
 
-com.company.xvspellconverter.view.user/UserListView.title=Users
-com.company.xvspellconverter.view.user/UserDetailView.title=User
-com.company.xvspellconverter.view.user/confirmPassword=Confirm password
-com.company.xvspellconverter.view.user/passwordsDoNotMatch=Passwords do not match
-com.company.xvspellconverter.view.user/additionalMenu=Additional
+com.company.xvspellconverter.infra.view.user/UserListView.title=Usuários
+com.company.xvspellconverter.infra.view.user/UserDetailView.title=Usuário
+com.company.xvspellconverter.infra.view.user/confirmPassword=Confirmar a senha
+com.company.xvspellconverter.infra.view.user/passwordsDoNotMatch=As senhas não estão iguais
+com.company.xvspellconverter.infra.view.user/additionalMenu=Adicional
 
-com.company.xvspellconverter.view.word/wordDetailView.title=Palavra
-com.company.xvspellconverter.view.word/wordListView.title=Palavras
+com.company.xvspellconverter.infra.view.word/wordDetailView.title=Palavra
+com.company.xvspellconverter.infra.view.word/wordListView.title=Palavras
 
-com.company.xvspellconverter/menu.application.title=Application
+com.company.xvspellconverter/menu.application.title=Aplicação
