fix login button and clean button

--- a/src/main/resources/com/company/xvspellconverter/messages_pt_BR.properties
+++ b/src/main/resources/com/company/xvspellconverter/messages_pt_BR.properties
@@ -1,9 +1,9 @@
 databaseUniqueConstraintViolation.IDX_USER__ON_USERNAME=Já existe um usuário com o mesmo nome de usuário
 
-com.company.xvspellconverter.view.main/MainView.title=XV Converter
-com.company.xvspellconverter.view.main/applicationTitle.text=XV Converter
-com.company.xvspellconverter.view.main/navigation.ariaLabel=Telas
-com.company.xvspellconverter.view.main/drawerToggle.ariaLabel=Alternar menu
+com.company.xvspellconverter.infra.view.main/MainView.title=XV Converter
+com.company.xvspellconverter.infra.view.main/applicationTitle.text=XV Converter
+com.company.xvspellconverter.infra.view.main/navigation.ariaLabel=Telas
+com.company.xvspellconverter.infra.view.main/drawerToggle.ariaLabel=Alternar menu
 
 com.company.xvspellconverter.infra.entity/Convert=Convert
 com.company.xvspellconverter.infra.entity/Convert.from=From
